@@ -1,4 +1,4 @@
-rev 13-Apr_09-12_36
+rev 13-Apr_10-20_06
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -194,3 +194,6 @@ Restored aspell Language button (when Scayt is turned off).
 
 9 April
 Removed compatibility support for pre-jquery functions.
+
+10 April
+Removed missed jquery compatibility script.
